--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h1>$ whoami</h1>
                     <h2>matheus@fidelis:~$</h2>
                     <p>Power Ranger, Piloto de Helicópteros <br> e Astronauta da NASA.</p>
-                    <p>#Blogger, #Linux #SysAdmin, <br> #Web #PHP #Developer e Entusiasta #Python.</p>
+                    <p>#Blogger, #Linux, #DevOps, #Docker<br> #Web #PHP #Developer e Entusiasta #Python e #NodeJS.</p>
                 </header>
                 <hr>
                 <footer>
@@ -47,6 +47,7 @@
                 </footer>
 
                 <pre  style="font-family:arial;font-size:12px;border:1px dashed #CCCCCC;width:99%;height:auto;overflow:auto;text-transform: none;padding:0px;color:#000000;text-align:left;line-height:20px;"><code style="color:#000000;word-wrap:normal;">
+
     class contact extends person {
     
         private $name = "Matheus Scarpato Fidelis";
@@ -54,48 +55,71 @@
         private $myBlog = "nanoshots.com.br";
 
         private $techs = array(
-                        <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP5"</a>,
-                        <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP7"</a>,
-                        <a href="https://jquery.com/" target="_blank">"#Jquery"</a>,
-                        <a href="http://cakephp.org/" target="_blank">"#CakePHP3"</a>,
-                        <a href="https://www.codeigniter.com/" target="_blank">"#CodeIgniter"</a>,
-                        <a href="http://getbootstrap.com/" target="_blank">"#TwitterBootstrap"</a>,
-                        <a href="https://www.getmdl.io/" target="_blank">"#MaterialDesign"</a>,
-                        <a href="http://www.w3schools.com/" target="_blank">"#HTML5/CSS3/Javascript"</a>,
-                        <a href="https://www.python.org/" target="_blank">"#Python2.7"</a>,
-                        <a href="https://www.djangoproject.com/" target="_blank">"#DjangoProject"</a>,
-                        "#Linux SysAdmin",
-                        "#DevOps", 
-                        "#Git",
-                        "#Jenkins", 
-                        "#AmazonAWS", 
-                        "#Docker",
-                        "#MySQL-MariaDB, 
-                        "#PostgreSQL", 
-                        "#Security",
-                        "#Server Hardening"
-                        );
+            <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP5"</a>,
+            <a href="https://secure.php.net/manual/pt_BR/index.php" target="_blank">"#PHP7"</a>,
+            <a href="https://jquery.com/" target="_blank">"#Jquery"</a>,
+            <a href="http://angular.io" target="_blank">"#AngularJS"</a>,
+            <a href="https://nodejs.org/" target="_blank">"#NodeJS"</a>,
+            <a href="http://cakephp.org/" target="_blank">"#CakePHP3"</a>,
+            <a href="https://framework.zend.com/" target="_blank">"#ZendFramework"</a>,
+            <a href="https://symfony.com/" target="_blank">"#Symfony"</a>,
+            <a href="http://silex.sensiolabs.org/" target="_blank">"#Silex"</a>,
+            <a href="https://www.slimframework.com/" target="_blank">"#Slim"</a>,
+            <a href="https://www.codeigniter.com/" target="_blank">"#CodeIgniter"</a>,
+            <a href="http://getbootstrap.com/" target="_blank">"#TwitterBootstrap"</a>,
+            <a href="https://www.getmdl.io/" target="_blank">"#MaterialDesign"</a>,
+            <a href="http://www.w3schools.com/" target="_blank">"#HTML5/CSS3/Javascript"</a>,
+            <a href="https://www.python.org/" target="_blank">"#Python2.7"</a>,
+            <a href="https://www.djangoproject.com/" target="_blank">"#DjangoProject"</a>,
+            "#Vagrant",
+            "#APICrafter",
+            "#Microservices",
+            "#Linux SysAdmin",
+            "#DevOps", 
+            "#Cloud",
+            "#Docker",
+            "#Kubernetes",
+            "#DockerSWARM",
+            "#HighAvailability",
+            "#Git",
+            "#Jenkins", 
+            "#AmazonAWS", 
+            "#Docker",
+            "#MySQL-MariaDB, 
+            "#MongoDB",
+            "#ElasticSearch",
+            "#PostgreSQL", 
+            "#Security",
+            "#Server Hardening"
+        );
+
+        private $talks = NULL; // Em breve
+
+        private $codeShare = array(
+            <a href="https://github.com/msfidelis/Kill-Router-" target="_blank">"[+] Cinto de Utilidades Docker" => "Compartilhamento dos meus ambientes Docker"</a>,
+            <a href="https://github.com/msfidelis/SilexPHP-API-Skeleton" target="_blank">"[+] Silex API Skeleton" => "MVC Skeleton para API's com Silex"</a>,            
+        );
 
         private $myTools = array(
-                            <a href="https://github.com/msfidelis/Kill-Router-" target="_blank">"[+] Kill Router" => "Brute Force on Routers and Panels"</a>,
-                            <a href="https://github.com/msfidelis/CakePHPSmarty" target="_blank">"[+] CakePHPSmarty" => "CakePHP3 Core With Smarty"</a>,
-                            <a href="https://github.com/msfidelis/Sherlock" target="_blank">"[+] Sherlock" => "Pesquisa de Disclosures em Frameworks Web"</a>,
-                            <a href="https://github.com/msfidelis/TheLittleWAF" target="_blank">"[+] TheLittleWAF" => "Firewall Pessoal para Servidores"</a>,
-                            <a href="https://github.com/msfidelis/VHostCreator" target="_blank">"[+] VHostCreator" => "Automatização de configuração de VirtualHosts"</a>,
-                            <a href="https://github.com/msfidelis/HDWipeTool" target="_blank">"[+] HDWipeTool" => "Wipe total em HD's e Dispositivos"</a>,
-                            <a href="https://github.com/msfidelis/PythonBackupSystem" target="_blank">"[+] PythonBackupSystem" => "Backup Full e Diferencial em Python"</a>
-                            <a href="https://github.com/msfidelis/Telegram-ChatoBot" target="_blank">"[+] ChatoBot" => "Exemplo de Telegram Bot com Python e SQLite"</a>
-                            <a href="https://github.com/msfidelis/TorrentRSSDownloader" target="_blank">"[+] TorrentRSSDownloader" => "Exemplo de Daemon para fazer Download de Torrents"</a>
-                        );
+            <a href="https://github.com/msfidelis/Kill-Router-" target="_blank">"[+] Kill Router" => "Brute Force on Routers and Panels"</a>,
+            <a href="https://github.com/msfidelis/CakePHPSmarty" target="_blank">"[+] CakePHPSmarty" => "CakePHP3 Core With Smarty"</a>,
+            <a href="https://github.com/msfidelis/Sherlock" target="_blank">"[+] Sherlock" => "Pesquisa de Disclosures em Frameworks Web"</a>,
+            <a href="https://github.com/msfidelis/TheLittleWAF" target="_blank">"[+] TheLittleWAF" => "Firewall Pessoal para Servidores"</a>,
+            <a href="https://github.com/msfidelis/VHostCreator" target="_blank">"[+] VHostCreator" => "Automatização de configuração de VirtualHosts"</a>,
+            <a href="https://github.com/msfidelis/HDWipeTool" target="_blank">"[+] HDWipeTool" => "Wipe total em HD's e Dispositivos"</a>,
+            <a href="https://github.com/msfidelis/PythonBackupSystem" target="_blank">"[+] PythonBackupSystem" => "Backup Full e Diferencial em Python"</a>
+            <a href="https://github.com/msfidelis/Telegram-ChatoBot" target="_blank">"[+] ChatoBot" => "Exemplo de Telegram Bot com Python e SQLite"</a>
+            <a href="https://github.com/msfidelis/TorrentRSSDownloader" target="_blank">"[+] TorrentRSSDownloader" => "Exemplo de Daemon para fazer Download de Torrents"</a>
+        );
 
         private $projects = array(
-                            <a href="https://cienciahacker.ch/" target="_blank">"#CienciaHacker"</a>,
-                            <a href="http://www.nanoshots.com.br/" target="_blank">"#Nanoshots"</a>,
-                            <a href="http://www.meetup.com/pt-BR/GDG-Cabreuva/" target="_blank">"#GDGCabreuva"</a>,
-                            <a href="http://www.slackware.com/" target="_blank">"#SlackwareLinux"</a>,
-                            <a href="https://www.debian.org/index.pt.html" target="_blank">"#DebianLinux"</a>,
-                            <a href="https://www.centos.org/" target="_blank">"#CentOS"</a>,
-                        );
+            <a href="https://cienciahacker.ch/" target="_blank">"#CienciaHacker"</a>,
+            <a href="http://www.nanoshots.com.br/" target="_blank">"#Nanoshots"</a>,
+            <a href="http://www.meetup.com/pt-BR/GDG-Cabreuva/" target="_blank">"#GDGCabreuva"</a>,
+            <a href="http://www.slackware.com/" target="_blank">"#SlackwareLinux"</a>,
+            <a href="https://www.debian.org/index.pt.html" target="_blank">"#DebianLinux"</a>,
+            <a href="https://www.centos.org/" target="_blank">"#CentOS"</a>,
+        );
 
         public function showData() {
             <a href="mailto:matheus.fidelis@protonmail.com">var_dump($this-&gt;protonmail1);</a>
