--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+          <a class="nav-link js-scroll-trigger" href="#certification">Certifications</a>
         </li>
       </ul>
     </div>
@@ -74,6 +74,14 @@
         </div>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
+            <a href="https://github.com/msfidelis" target="_blank">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
             <a href="https://twitter.com/fidelissauro" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -90,13 +98,29 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a href="https://github.com/msfidelis" target="_blank">
+            <a href="https://nanoshots.com.br" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
+          <li class="list-inline-item">
+              <a href="https://gitlab.com/msfidelis" target="_blank">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fa fa-gitlab fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+                <a href="https://bitbucket.org/msfidelis/" target="_blank">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-bitbucket fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
         </ul>
       </div>
     </section>
@@ -209,10 +233,15 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Cloud Architect</h3>
             <div class="subheading mb-3">Superlógica Tecnologias | PJBank</div>
-            <p>High throughput and High Avalability architecure for payment services using AWS Solutions. Architecture for PCI Compliance Business. Microservices development using PHP and NodeJS.</p>
-            <p>Service Design and Implementation using Amazon AWS solutions like EC2, VPC Best Pratices, RDS, S3, ElasticSearch, Elastic Cache, AWS Lambda, Api Gateway, DynamoDB, SQS, Kinesis, CodePipeline, CodeBuild, ECS, Fargate, Route53, Cloudwatch, CloudFront, WAF and Shield.</p>
-            <p>Development and Improvements for CI/CD pipelines, Cloud Automations, Docker Implementation, Auto Scale and Serverless Based Design.</p>
-            <p>Monitoring and reporting improvements using ELK Stack, New Relic, Monyog, and Graylog. ChatOps with Slack to improve communication efficiency between teams, fast actions and fast reporting for Cloud Native Applications</p>
+            <p>High throughput and High Avalability architecure for payment services using AWS Solutions. Architecture for PCI
+              Compliance Business. Microservices development using PHP and NodeJS.</p>
+            <p>Service Design and Implementation using Amazon AWS solutions like EC2, VPC Best Pratices, RDS, S3, ElasticSearch,
+              Elastic Cache, AWS Lambda, Api Gateway, DynamoDB, SQS, Kinesis, CodePipeline, CodeBuild, ECS, Fargate, Route53,
+              Cloudwatch, CloudFront, WAF and Shield.</p>
+            <p>Development and Improvements for CI/CD pipelines, Cloud Automations, Docker Implementation, Auto Scale and Serverless
+              Based Design.</p>
+            <p>Monitoring and reporting improvements using ELK Stack, New Relic, Monyog, and Graylog. ChatOps with Slack to
+              improve communication efficiency between teams, fast actions and fast reporting for Cloud Native Applications</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jul 2016 - Present</span>
@@ -223,7 +252,8 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Web Developer</h3>
             <div class="subheading mb-3">Tecnologia Fox</div>
-            <p>ERP Development Solutions for Energy Industry using PHP, MySQL, MongoDB, HTML, CSS and Javascript on agile teams. Performance improvements. Automations using AWS Services and Jenkins.</p>
+            <p>ERP Development Solutions for Energy Industry using PHP, MySQL, MongoDB, HTML, CSS and Javascript on agile teams.
+              Performance improvements. Automations using AWS Services and Jenkins.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jan 2016 - Jul 2016</span>
@@ -234,7 +264,8 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Sysadmin Intern</h3>
             <div class="subheading mb-3">Industrias Fox</div>
-            <p>Deployment, Monitoring and Support for servers on AWS, Bare Metal and Hosted Systems. Performance , security and efficiency improvements for Web Servers and Cloud Applications for teams arround the country (Brazil)</p>
+            <p>Deployment, Monitoring and Support for servers on AWS, Bare Metal and Hosted Systems. Performance , security
+              and efficiency improvements for Web Servers and Cloud Applications for teams arround the country (Brazil)</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Apr 2015 - Jan 2016</span>
@@ -253,7 +284,6 @@
         </div>
 
       </div>
-
     </section>
 
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
@@ -267,7 +297,38 @@
             <div>Project Management, ITIL, Cobit, PMBok, Lean</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2014 - May 2018</span>
+            <span class="text-primary">Jan 2014 - Jul 2018</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="certification">
+      <div class="my-auto">
+        <h2 class="mb-5">Certifications</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="certifications/imasters-js.pdf">iMasters Certified Professional - Boas Práticas em Javascript</a>
+            </h3>
+            <div class="subheading mb-3">ES6, Scope, strict mode</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Jul 2017</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="certifications/imasters-php.pdf">iMasters Certified Professional - Boas Práticas em PHP</a>
+            </h3>
+            <div class="subheading mb-3">PSR, SOLID, Design Patterns</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Nov 2016</span>
           </div>
         </div>
 
