--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@
                   </span>
                 </a>
               </li>
+              <li class="list-inline-item">
+                  <a href="https://bitbucket.org/msfidelis/" target="_blank">
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-slideshare fa-stack-1x fa-inverse"></i>
+                    </span>
+                  </a>
+                </li>
         </ul>
       </div>
     </section>
