--- a/index.html
+++ b/index.html
@@ -319,6 +319,18 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">
+              <a href="https://exeed.pro/badge/15093">EXIN DevOps Professional</a>
+            </h3>
+            <div class="subheading mb-3">Lean, DevOps, Three Ways, Pipelines</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sep 2018</span>
+          </div>
+        </div>        
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
               <a href="certifications/imasters-js.pdf">iMasters Certified Professional - Boas Práticas em Javascript</a>
             </h3>
             <div class="subheading mb-3">ES6, Scope, strict mode</div>
