--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">
-              <a href="https://exeed.pro/badge/15093">EXIN DevOps Professional</a>
+              <a href="https://exeed.pro/badge/15093" target="_blank">EXIN DevOps Professional</a>
             </h3>
             <div class="subheading mb-3">Lean, DevOps, Three Ways, Pipelines</div>
           </div>
@@ -331,7 +331,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">
-              <a href="certifications/imasters-js.pdf">iMasters Certified Professional - Boas Práticas em Javascript</a>
+              <a href="certifications/imasters-js.pdf" target="_blank">iMasters Certified Professional - Boas Práticas em Javascript</a>
             </h3>
             <div class="subheading mb-3">ES6, Scope, strict mode</div>
           </div>
@@ -343,7 +343,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">
-              <a href="certifications/imasters-php.pdf">iMasters Certified Professional - Boas Práticas em PHP</a>
+              <a href="certifications/imasters-php.pdf" target="_blank">iMasters Certified Professional - Boas Práticas em PHP</a>
             </h3>
             <div class="subheading mb-3">PSR, SOLID, Design Patterns</div>
           </div>
