--- a/index.html
+++ b/index.html
@@ -319,6 +319,18 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">
+              <a href="https://www.certmetrics.com/amazon/public/badge.aspx?i=1&t=c&d=2018-12-28&ci=AWS00695464" target="_blank">AWS Certified Solutions Architect - Associate</a>
+            </h3>
+            <div class="subheading mb-3">AWS, VPC, Scale, Serverless, Databases</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Dec 2018</span>
+          </div>
+        </div>  
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
               <a href="https://exeed.pro/badge/15093" target="_blank">EXIN DevOps Professional</a>
             </h3>
             <div class="subheading mb-3">Lean, DevOps, Three Ways, Pipelines</div>
