--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#github">Top Github</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
@@ -70,8 +73,9 @@
           Cloud Architect | Developer | Solutions | DevOps
         </div>
         <div class="subheading mb-5">
-          matheus@nanoshots.com.br
+          msfidelis01@gmail.com
         </div>
+        <div class="no-print">
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
             <a href="https://github.com/msfidelis" target="_blank">
@@ -130,6 +134,7 @@
                   </a>
                 </li>
         </ul>
+      </div>
       </div>
     </section>
 
@@ -217,18 +222,26 @@
             <i class="fa-li fa fa-check"></i>
             DevOps Mindset, CI/CD Pipelines, Lean Workflow</li>
           <li>
-            <li>
+          <li>
               <i class="fa-li fa fa-check"></i>
-              API-First, Microservice Architecture</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cloud Native Apps &amp; Containers</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              High Performance Computing at Scale</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Agile Development &amp; Lean IT</li>
+              Infrastructure as Code and Bootstraping</li>
+          <li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            API-First, Microservices Architecture
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Cloud Native Apps &amp; Containers
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            High Performance Computing at Scale
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Agile Development &amp; Lean IT
+          </li>
         </ul>
       </div>
     </section>
@@ -239,16 +252,19 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Cloud Architect</h3>
+            <h3 class="mb-0">Cloud / DevOps Architect</h3>
             <div class="subheading mb-3">Superlógica Tecnologias | PJBank</div>
             <p>High throughput and High Avalability architecure for payment services using AWS Solutions. Architecture for PCI
-              Compliance Business. Microservices development using PHP and NodeJS.</p>
+              Compliance Business. Microservices development using PHP, Go and NodeJS.</p>
             <p>Service Design and Implementation using Amazon AWS solutions like EC2, VPC Best Pratices, RDS, S3, ElasticSearch,
               Elastic Cache, AWS Lambda, Api Gateway, DynamoDB, SQS, Kinesis, CodePipeline, CodeBuild, ECS, Fargate, Route53,
               Cloudwatch, CloudFront, WAF and Shield.</p>
             <p>Development and Improvements for CI/CD pipelines, Cloud Automations, Docker Implementation, Auto Scale and Serverless
               Based Design.</p>
-            <p>Monitoring and reporting improvements using ELK Stack, New Relic, Monyog, and Graylog. ChatOps with Slack to
+            <p>Adoption of IaC (Infrastructure as a Code) on Teams Culture with Terraform, Ansible and Serverless Framework </p>
+            <p>Implementation of HA Architecure using Kubernetes with Istio </p>
+            <p>Monitoring and reporting improvements using ELK Stack, New Relic, Monyog, and Graylog.  </p>
+            <p>ChatOps with Slack to
               improve communication efficiency between teams, fast actions and fast reporting for Cloud Native Applications</p>
           </div>
           <div class="resume-date text-md-right">
@@ -288,6 +304,45 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Feb 2013 - Apr 2015</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="github">
+      <div class="my-auto">
+        <h2 class="mb-5">Top Github Repos</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Serverless Architecture Boilerplate</h3>
+            <div class="subheading mb-3">https://github.com/msfidelis/serverless-architecture-boilerplate</div>
+            <div>Boilerplate to organize and deploy big projects using AWS API Gateway and AWS Lambda with Serverless Framework </div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">ECS Pipeline</h3>
+            <div class="subheading mb-3">https://github.com/msfidelis/ecs-pipeline</div>
+            <div>Create environment and deployment pipelines to ECS Fargate with CodePipeline, CodeBuild and Github using Terraform</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Serverless Pipeline</h3>
+            <div class="subheading mb-3">https://github.com/msfidelis/serverless-pipeline</div>
+            <div>Pipeline to build, test and deploy Serverless Framework Projects with CodeBuild and CodePipeline on AWS using Terraform.</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Kubernetes Istio Cluster</h3>
+            <div class="subheading mb-3">https://github.com/msfidelis/kubernetes-istio-cluster</div>
+            <div>Simple Kubernetes Cluster with Terraform and Ansible </div>
           </div>
         </div>
 
