--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
           <span class="text-primary">Fidelis</span>
         </h1>
         <div class="subheading mb-0">
-          Cloud Architect | Developer | Solutions | DevOps
+          Cloud Architect | Developer | Solutions | DevOps | SRE
         </div>
         <div class="subheading mb-5">
-          msfidelis01@gmail.com
+          matheus@nanoshots.com.br
         </div>
         <div class="no-print">
         <ul class="list-inline list-social-icons mb-0">
@@ -224,6 +224,10 @@
           <li>
           <li>
               <i class="fa-li fa fa-check"></i>
+              SRE, Monitoring and Disaster Recovery</li>
+          <li>
+          <li>
+              <i class="fa-li fa fa-check"></i>
               Infrastructure as Code and Bootstraping</li>
           <li>
           <li>
@@ -251,24 +255,36 @@
         <h2 class="mb-5">Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Cloud Architect / SRE</h3>
+              <div class="subheading mb-3">Superlógica Tecnologias | PJBank</div>
+               <p>High throughput and high availability architecure for payment services using AWS Solutions. Architecture for PCI Compliance Business. Microservices development using Go and NodeJS.</p>
+               <p>Internal Consultant for new projects and services for high performance and cost optimization</p>
+               <p>Design, Implementation and Support for a lot of services in production</p>
+               <p>Management, implementation and Disaster Recovery Strategies with Monitoring and IaC Concept</p>
+               <p>Multicloud HA Service Design using Kubernetes Stack on AWS, Oracle Cloud and Google Cloud Platform</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Jul 2019 - Present</span>
+            </div>
+          </div>        
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">Cloud / DevOps Architect</h3>
+            <h3 class="mb-0">DevOps Engineer</h3>
             <div class="subheading mb-3">Superlógica Tecnologias | PJBank</div>
-            <p>High throughput and High Avalability architecure for payment services using AWS Solutions. Architecture for PCI
-              Compliance Business. Microservices development using PHP, Go and NodeJS.</p>
             <p>Service Design and Implementation using Amazon AWS solutions like EC2, VPC Best Pratices, RDS, S3, ElasticSearch,
               Elastic Cache, AWS Lambda, Api Gateway, DynamoDB, SQS, Kinesis, CodePipeline, CodeBuild, ECS, Fargate, Route53,
               Cloudwatch, CloudFront, WAF and Shield.</p>
             <p>Development and Improvements for CI/CD pipelines, Cloud Automations, Docker Implementation, Auto Scale and Serverless
               Based Design.</p>
             <p>Adoption of IaC (Infrastructure as a Code) on Teams Culture with Terraform, Ansible and Serverless Framework </p>
-            <p>Implementation of HA Architecure using Kubernetes with Istio </p>
             <p>Monitoring and reporting improvements using ELK Stack, New Relic, Monyog, and Graylog.  </p>
             <p>ChatOps with Slack to
               improve communication efficiency between teams, fast actions and fast reporting for Cloud Native Applications</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Jul 2016 - Present</span>
+            <span class="text-primary">Jul 2016 - Jan 2019</span>
           </div>
         </div>
 
