--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           Cloud Architect | Developer | Solutions | DevOps | SRE
         </div>
         <div class="subheading mb-5">
-          matheus@nanoshots.com.br
+          matheus@nanoshots.com.br | +55 11 97452-3078
         </div>
         <div class="no-print">
         <ul class="list-inline list-social-icons mb-0">
