--- a/pt-br.html
+++ b/pt-br.html
@@ -258,7 +258,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Cloud Architect / SRE</h3>
               <div class="subheading mb-3">Superlógica Tecnologias | PJBank</div>
-               <p>Arquitetura de alto tráfego e alta dosponibilidade para sistemas de pagamento utilizando Soluções da AWS</p>
+                <p>Arquitetura de alto tráfego e alta dosponibilidade para sistemas de pagamento utilizando Soluções da AWS</p>
                 <p>Consultor interno para novos projetos e serviços visando alta performance e otimização de custos</p>
                 <p>Design, implementacão e suporte para vários serviços em produção</p>
                 <p>Gerenciamento e implementação de estratégias de recuperação de desastres com monitoramento e Infraestrutura como Código</p>
@@ -282,7 +282,6 @@
             </p>
             <p>Adoção de IaC (Infrastructure as a Code) na cultura dos times com Terraform, Ansible e Serverless Framework </p>
             <p>Melhoria de rotinas de monitramento utilizando New Relic, ELK, Monyog e Graylog</p>
-            <p>Implementação de ChatOps em Chats internos para melhoria e empoderamento de times</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Jul 2016 - Jan 2019</span>
@@ -295,9 +294,7 @@
             <div class="subheading mb-3">Tecnologia Fox</div>
             <p>
                 Desenvolvimento de sistemas ERP para industria de economia energética utulizando tecnologias Web como PHP, MySQL, MongoDB e metodologias ágeis
-            </p>
-            <p>
-                Automação de pipelines e serviços AWS utilizando Jenkins
+                e automação de pipelines e serviços AWS utilizando Jenkins
             </p>
           </div>
           <div class="resume-date text-md-right">
