--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">
-              <a href="/files/gpg/msfidelis01@gmail.com/pgp.pub" target="_blank">PGP Public Key - Matheus Scarpato Fidelis <msfidelis01@gmail.com></a>
+              <a href="/files/gpg/msfidelis01@gmail.com/pgp.pub" target="_blank">PGP Public Key - Matheus Scarpato Fidelis - msfidelis01@gmail.com </a>
             </h3>
             <div class="subheading mb-3">Key ID: 336FE4134C6B4836</div>
           </div>
@@ -425,7 +425,7 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">
-              <a href="/files/gpg/matheus@nanoshots.com.br/pgp.pub" target="_blank">PGP Public Key - Matheus Scarpato Fidelis <matheus@nanoshots.com.br></a>
+              <a href="/files/gpg/matheus@nanoshots.com.br/pgp.pub" target="_blank">PGP Public Key - Matheus Scarpato Fidelis - matheus@nanoshots.com.br</a>
             </h3>
             <div class="subheading mb-3">Key ID: 7521F090D7A8F470</div>
           </div>
