--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#github">Top Github</a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#certification">Certifications</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#keys">Public Keys</a>
+        </li>        
       </ul>
     </div>
   </nav>
@@ -326,45 +326,6 @@
       </div>
     </section>
 
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="github">
-      <div class="my-auto">
-        <h2 class="mb-5">Top Github Repos</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Serverless Architecture Boilerplate</h3>
-            <div class="subheading mb-3">https://github.com/msfidelis/serverless-architecture-boilerplate</div>
-            <div>Boilerplate to organize and deploy big projects using AWS API Gateway and AWS Lambda with Serverless Framework </div>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">ECS Pipeline</h3>
-            <div class="subheading mb-3">https://github.com/msfidelis/ecs-pipeline</div>
-            <div>Create environment and deployment pipelines to ECS Fargate with CodePipeline, CodeBuild and Github using Terraform</div>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Serverless Pipeline</h3>
-            <div class="subheading mb-3">https://github.com/msfidelis/serverless-pipeline</div>
-            <div>Pipeline to build, test and deploy Serverless Framework Projects with CodeBuild and CodePipeline on AWS using Terraform.</div>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
-          <div class="resume-content mr-auto">
-            <h3 class="mb-0">Kubernetes Istio Cluster</h3>
-            <div class="subheading mb-3">https://github.com/msfidelis/kubernetes-istio-cluster</div>
-            <div>Simple Kubernetes Cluster with Terraform and Ansible </div>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
       <div class="my-auto">
         <h2 class="mb-5">Education</h2>
@@ -432,6 +393,41 @@
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">Nov 2016</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="keys">
+      <div class="my-auto">
+        <h2 class="mb-5">Keys</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="/files/rsa/id_rsa.pub" target="_blank">RSA Public Key</a>
+            </h3>
+            <div class="subheading mb-3">Fingerprint: 66:e8:06:c3:fe:1d:1e:b9:f8:ca:61:80:b2:28:8b:eb</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="/files/gpg/msfidelis01@gmail.com/pgp.pub" target="_blank">PGP Public Key - Matheus Scarpato Fidelis - msfidelis01@gmail.com </a>
+            </h3>
+            <div class="subheading mb-3">Key ID: 336FE4134C6B4836</div>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">
+              <a href="/files/gpg/matheus@nanoshots.com.br/pgp.pub" target="_blank">PGP Public Key - Matheus Scarpato Fidelis - matheus@nanoshots.com.br</a>
+            </h3>
+            <div class="subheading mb-3">Key ID: 7521F090D7A8F470</div>
           </div>
         </div>
 
