--- a/index.html
+++ b/index.html
@@ -256,6 +256,20 @@
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Site Reliability Engineering</h3>
+              <div class="subheading mb-3">Pagseguro PagBank</div>
+              <p>SLO, SLI and SLA management with Observability optimizations</p>
+              <p>Internal Consultant for new projects and services for high performance and cost optimization</p>
+              <p>Design, Implementation and Support for a lot of services in production</p>
+              <p>Management, implementation and Disaster Recovery Strategies with Monitoring and IaC Concept</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Jul 2019 - Present</span>
+            </div>
+          </div>          
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Cloud Architect / SRE</h3>
               <div class="subheading mb-3">Superlógica Tecnologias | PJBank</div>
                <p>High throughput and high availability architecure for payment services using AWS Solutions. Architecture for PCI Compliance Business. Microservices development using Go and NodeJS.</p>
