--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
               <p>Management, implementation and Disaster Recovery Strategies with Monitoring and IaC Concept</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Jul 2019 - Present</span>
+              <span class="text-primary">Ago 2019 - Present</span>
             </div>
           </div>          
 
@@ -279,7 +279,7 @@
                <p>Multicloud HA Service Design using Kubernetes Stack on AWS, Oracle Cloud and Google Cloud Platform</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Jul 2019 - Present</span>
+              <span class="text-primary">Jan 2019 - Ago 2019</span>
             </div>
           </div>        
 
