--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
             </a>
           </li>
           <li class="list-inline-item">
+            <a href="https://www.youtube.com/MatheusFidelissauro" target="_blank">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>          
+          <li class="list-inline-item">
             <a href="https://www.linkedin.com/in/msfidelis/" target="_blank">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
