--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
             </a>
           </li>
           <li class="list-inline-item">
+            <a href="https://fidelissauro.substack.com" target="_blank">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>          
+          <li class="list-inline-item">
               <a href="https://gitlab.com/msfidelis" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
