--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css">
   <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
@@ -194,6 +194,12 @@
           <li class="list-inline-item">
             <i class="devicons devicon-git-plain-wordmark"></i>
           </li>
+          <li class="list-inline-item">
+            <i class="devicons devicon-jenkins-plain"></i>
+          </li>    
+          <li class="list-inline-item">
+            <i class="devicons devicon-kubernetes-plain"></i>
+          </li>                  
         </ul>
 
 
@@ -271,6 +277,20 @@
         <h2 class="mb-5">Experience</h2>
 
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
+          <div class="resume-content mr-auto">
+            <h3 class="mb-0">Software Specialist - SRE</h3>
+            <div class="subheading mb-3">Itaú Unibanco</div>
+            <p>Solutions Architect for Microservices and Critical Systems</p>
+            <p>Cloud Optimization for Core Products, Kubernetes foundation with EKS</p>
+            <p>Observability and Metrics digests and management</p>
+            <p>Core Systems Modernizations and Cloud Native Migrations</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Apr 2021 - Present</span>
+          </div>
+        </div>      
+
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Site Reliability Engineering</h3>
               <div class="subheading mb-3">Pagseguro PagBank</div>
@@ -280,7 +300,7 @@
               <p>Management, implementation and Disaster Recovery Strategies with Monitoring and IaC Concept</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Ago 2019 - Present</span>
+              <span class="text-primary">Ago 2019 - Apr 2021</span>
             </div>
           </div>          
 
